--- a/src/main/webapp/register.html
+++ b/src/main/webapp/register.html
@@ -4,9 +4,7 @@
     <meta charset = "UTF-8">
     <title>用户注册界面</title>
     <link type="text/css" href="css/register.css" rel="stylesheet"/>
-
     <script type="text/javascript" src="js/register.js"></script>
-
 </head>
 <body>
 <div class="banner">
@@ -14,23 +12,25 @@
     <form name="form1" action="doRegister.jsp" method="post" onSubmit="return check(this)">
         <div class="box">
             <label class="i-label">*用户名</label>
-            <input type="text" name="username" id="username" class="i-text" onfocus="usernameFocus()" onblur="usernameBlur()"/>
+            <input type="text" name="username" id="username" class="i-text" onfocus="usernameFocused()" onblur="usernameBlur()"/>
         </div>
         <div id="usernameId"></div>
         <div class="box">
             <label class="i-label">*密&nbsp;&nbsp;&nbsp;&nbsp;码</label>
-            <input type="password" name="userpwd" class="i-text"/>
+            <input type="password" name="userpwd" id="userpwd" class="i-text" onfocus="userpwdFocused()" onblur="userpwdBlur()"/>
         </div>
+        <div id="userpwdId"></div>
         <div class="box">
             <label class="i-label">*密码确认</label>
-            <input type="password" name="userpwd2" class="i-text"/>
+            <input type="password" name="userpwd2" id="userpwd2" class="i-text" onblur="userpwd2Blur()"/>
         </div>
+        <div id="userpwd2Id"></div>
         <div class="box">
             <label class="i-label">性&nbsp;&nbsp;&nbsp;&nbsp;别</label>
             <span class="i-text">
- <input type="radio" name="sex" checked>男
- <input type="radio" name="sex">女
- </span>
+            <input type="radio" name="sex" checked>男
+            <input type="radio" name="sex">女
+            </span>
         </div>
         <div class="box">
             <label class="i-label">出生年月</label>
@@ -38,16 +38,19 @@
         </div>
         <div class="box">
             <label class="i-label">*邮&nbsp;&nbsp;&nbsp;&nbsp;箱</label>
-            <input type="text" name="mail" class="i-text">
+            <input type="text" name="mail"  id="useremail" class="i-text" onblur="useremailBlur()">
         </div>
+        <div id="useremailId"></div>
         <div class="box">
             <label class="i-label">现居住地</label>
+            <span>
             <select name="selProvince" class="i-select" onchange="changeCity()">
                 <!--<option value="0" selected="selected">-选择省份-</option>-->
             </select>
             <select name="selCity" class="i-select">
                 <!--<option value="0" selected="selected">-选择城市-</option>-->
             </select>
+            </span>
         </div>
         <div class="box">
             <label class="i-label">职&nbsp;&nbsp;&nbsp;&nbsp;业</label>
@@ -59,25 +62,26 @@
         <div class="box">
             <label class="i-label">个人爱好</label>
             <span class="i-text" style="display:block;width:300px;">
- <input type="checkbox" name="like" value="电脑网络" checked>电脑网络
- <input type="checkbox" name="like" value="影视娱乐">影视娱乐
- <input type="checkbox" name="like" value="棋牌娱乐">棋牌娱乐
- </span>
+            <input type="checkbox" name="like" value="电脑网络" checked>电脑网络
+            <input type="checkbox" name="like" value="影视娱乐">影视娱乐
+            <input type="checkbox" name="like" value="棋牌娱乐">棋牌娱乐
+            </span>
+
             <span class="i-text" style="display:block;width:300px;">
- <input type="checkbox" name="like" value="读书读报">读书读报
- <input type="checkbox" name="like" value="美酒佳肴">美酒佳肴
- <input type="checkbox" name="like" value="绘画书法">绘画书法
- </span>
+            <input type="checkbox" name="like" value="读书读报">读书读报
+            <input type="checkbox" name="like" value="美酒佳肴">美酒佳肴
+            <input type="checkbox" name="like" value="绘画书法">绘画书法
+            </span>
         </div>
         <div class="box">
             <label class="i-label">个人说明</label>
             <textarea rows="8" cols="30" name="intro" class="i-text"></textarea>
         </div>
         <div class="box">
- <span class="i-text">
- <input type="submit" value="提 交">&nbsp;&nbsp;&nbsp;&nbsp;
- <input type="reset" value="清 除">
- </span>
+        <span class="i-text">
+        <input type="submit" value="提 交">&nbsp;&nbsp;&nbsp;&nbsp;
+        <input type="reset" value="清 除">
+        </span>
         </div>
     </form>
 </div>
